made Shop and its decendents persistable, removed TriPredicate. all tests are passing